[AJ] Validité XHTML Strict 1.0 sur validator.w3.org

--- a/composants/entete.html
+++ b/composants/entete.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="fr" xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 <head>
   <title>ACCUEIL_PORTEAIL</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="CSS_DEFAUT" type="text/css" media="all" title="Défaut">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" href="CSS_DEFAUT" type="text/css" media="all" title="Défaut" />
 </head>
 <body>
   <div id="chapeau">
