[FIX] Changement des variables dans l'entête par @@MA_VAR@@

--- a/composants/entete.html
+++ b/composants/entete.html
@@ -2,12 +2,12 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="fr" xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 <head>
-  <title>ACCUEIL_PORTEAIL</title>
+  <title>@@ACCUEIL_PORTEAIL@@</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" href="CSS_DEFAUT" type="text/css" media="all" title="Défaut" />
+  <link rel="stylesheet" href="@@CSS_DEFAUT@@" type="text/css" media="all" title="Défaut" />
 </head>
 <body>
   <div id="chapeau">
-    <h1>TITRE_PORTEAIL</h1>
+    <h1>@@TITRE_PORTEAIL@@</h1>
   </div>
   <div id="corps">
