[AJ] "Page générée à l'aide de" en fin de page et corrections diverses : - remise au propre des balises DIV dans le HTML - ajout d'un fichier 'contenu_fin.html' pour fermer le contenu de la   page

--- a/composants/enqueue.html
+++ b/composants/enqueue.html
@@ -1,3 +1,7 @@
+<!-- Pied de page -->
+
+  <div id="soulier">
+    <p>Page générée à l'aide de <a href="http://git.dossmann.net/scripts/porteail.git/" title="Se rendre sur le dépôt source du projet PorteAil">PorteAil</a></p>
   </div>
 </body>
 </html>
