--- a/composants/element.html
+++ b/composants/element.html
@@ -3,7 +3,7 @@
           <a href="@@URL_ELEMENT@@" title="@@DESC_ELEMENT@@">@@TITRE_ELEMENT@@</a>
         </div>
         <div class="image">
-          <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="@@DESC_IMAGE@@">
+          <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="@@DESC_IMAGE@@" />
         </div>
       </div>
 
