--- a/composants/enqueue.html
+++ b/composants/enqueue.html
@@ -1,7 +1,7 @@
 <!-- Pied de page -->
 
   <div id="soulier">
-    <p>Page générée à l'aide de <a href="http://git.dossmann.net/scripts/porteail.git/" title="Se rendre sur le dépôt source du projet PorteAil">PorteAil</a></p>
+    <p>Page générée à l'aide de <a href="http://porteail.e-mergence.org/" title="Se rendre sur la page officielle du projet PorteAil">PorteAil</a></p>
   </div>
 </body>
 </html>
