[AJ] Tests sur une structure plus simple pour les éléments. Sans trop de résultats concluants.

--- a/exemple/element.html
+++ b/exemple/element.html
@@ -28,8 +28,9 @@ background-color: red;
   </style>
 </head>
 <body>
-      <div class="element">
-          <a href="@@URL_ELEMENT@@" title="@@DESC_ELEMENT@@">@@TITRE_ELEMENT@@ <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="img" /></a>
-      </div>
-    </body>
-  </html>
+    <div class="element">
+      <a href="http://localhost/" title="Some description">Microblog</a>
+      <img src="http://nutritive.org/image/identica.png" alt="Some img" title="img" />
+    </div>
+  </body>
+</html>
