[MàJ] Fichier CSS pour les éléments pour un affichage plus cohérent, notamment au passage de la souris sur l'image contenue dans le cadre

--- a/composants/element.html
+++ b/composants/element.html
@@ -1,9 +1,8 @@
-      <div class="element">
-        <div class="titre">
-          <a href="@@URL_ELEMENT@@" title="@@DESC_ELEMENT@@">@@TITRE_ELEMENT@@</a>
-        </div>
-        <div class="image">
-          <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="@@DESC_IMAGE@@" />
-        </div>
-      </div>
+       <a class="cadre" href="@@URL_ELEMENT@@" title="@@DESC_ELEMENT@@">
+         <div class="element">
+           @@TITRE_ELEMENT@@ <br />
+
+           <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="@@DESC@@IMAGE@@" />
+         </div>
+       </a>
 
