[COR] Correction d'un bug sur la description de l'image

--- a/composants/element.html
+++ b/composants/element.html
@@ -2,7 +2,7 @@
          <div class="element">
            @@TITRE_ELEMENT@@ <br />
 
-           <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="@@DESC@@IMAGE@@" />
+           <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="@@DESC_IMAGE@@" />
          </div>
        </a>
 
