[AJ] Plusieurs feuilles de styles dans l'entête. Ce qui permet de choisir une feuille de style pour la couleur.

--- a/composants/entete.html
+++ b/composants/entete.html
@@ -5,6 +5,7 @@
   <title>@@ACCUEIL_PORTEAIL@@</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="@@CSS_DEFAUT@@" type="text/css" media="all" title="Défaut" />
+  <link rel="stylesheet" href="@@CSS_COULEUR@@" type="text/css" media="all" title="Défaut" />
 </head>
 <body>
   <div id="chapeau">
