[AJ] Suppression du DIV 'ensemble_element'
  * Suppression de la balise
  * Remplacement par un UL
  * Ajout de LI
  * Ajout d'un point virgule pour les lecteurs audios
  * Ajout du CSS pour cacher les points virgules

--- a/composants/element.html
+++ b/composants/element.html
@@ -1,8 +1,10 @@
+     <li>
        <a class="cadre" href="@@URL_ELEMENT@@" title="@@DESC_ELEMENT@@">
          <div class="element">
            @@TITRE_ELEMENT@@ <br />
 
            <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="@@DESC_IMAGE@@" />
          </div>
-       </a>
+       </a><span class="cache_cache">&nbsp;;</span>
+     </li>
 
