[AJ] Modification des éléments d'une catégorie pour un meilleur affichage dans les navigateurs textuels
  * Suppression du titre et de la description d'une image
  * Remplacement de la description par celle du lien
  * ALT contenant une espace pour ne rien afficher sous elinks
  * Mise à jour du fichier creation_categ.sh
  * Mise à jour de la doc
  * Mise à jour du fichier TACHES
  * Adaptation HTML de l'élément

--- a/composants/element.html
+++ b/composants/element.html
@@ -3,7 +3,7 @@
          <div class="element">
            @@TITRE_ELEMENT@@ <br />
 
-           <img src="@@URL_IMAGE@@" alt="@@TITRE_IMAGE@@" title="@@DESC_IMAGE@@" />
+           <img src="@@URL_IMAGE@@" alt="@@DESC_IMAGE@@" title="@@TITRE_IMAGE@@" />
          </div>
        </a><span class="cache_cache">&nbsp;;</span>
      </li>
