[CORR] Changement du code HTML de l'élément
  * DIV en SPAN
  * Adaptation du CSS en conséquence
  * Validation sur validator.w3.org semble OK.

--- a/composants/element.html
+++ b/composants/element.html
@@ -1,10 +1,10 @@
      <li>
        <a class="cadre" href="@@URL_ELEMENT@@" title="@@DESC_ELEMENT@@">
-         <div class="element">
+         <span class="element">
            @@TITRE_ELEMENT@@ <br />
 
            <img src="@@URL_IMAGE@@" alt="@@DESC_IMAGE@@" title="@@TITRE_IMAGE@@" />
-         </div>
+         </span>
        </a><span class="cache_cache">&nbsp;;</span>
      </li>
 
