[AJ] Passage au HTML5
fixes #1

--- a/composants/enqueue.html
+++ b/composants/enqueue.html
@@ -1,7 +1,7 @@
 <!-- Pied de page -->
 
-  <div id="soulier">
+  <footer>
     <p>Page générée à l'aide de <a href="http://porteail.e-mergence.org/" title="Se rendre sur la page officielle du projet PorteAil">PorteAil</a></p>
-  </div>
+  </footer>
 </body>
 </html>
