--- a/composants/entete.html
+++ b/composants/entete.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html xml:lang="fr" xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 <head>
+  <meta charset="UTF-8" />
   <title>@@ACCUEIL_PORTEAIL@@</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" href="@@CSS_DEFAUT@@" type="text/css" media="all" title="Défaut" />
   <link rel="stylesheet" href="@@CSS_COULEUR@@" type="text/css" media="all" title="Défaut" />
 </head>
 <body>
-  <div id="chapeau">
+<!-- Entete de page -->
+  <header>
     <h1>@@TITRE_PORTEAIL@@</h1>
-  </div>
+  </header>
+
+<!-- Corps de la page -->
   <div id="corps">
