--- a/composants/menu.html
+++ b/composants/menu.html
@@ -1,4 +1,5 @@
-  <div id="cartable">
+<!-- Menu de la page -->
+  <aside id="cartable">
     <div class="sacoche">
       <h3>Menu</h3>
       <ul>
@@ -7,4 +8,4 @@
         <li>Lien 3</li>
       </ul>
     </div>
-  </div>
+  </aside>
