[IMP] HTML5 improvements with Javascript for old web browser

--- a/composants/entete.html
+++ b/composants/entete.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>@@ACCUEIL_PORTEAIL@@</title>
+<!--[if lt IE 9]>
+  <script src="html5.js" type="text/javascript"></script>
+<![endif]-->
   <link rel="stylesheet" href="@@CSS_DEFAUT@@" type="text/css" media="all" title="Défaut" />
   <link rel="stylesheet" href="@@CSS_COULEUR@@" type="text/css" media="all" title="Défaut" />
 </head>
