--- a/composants/menu.html
+++ b/composants/menu.html
@@ -1,5 +1,5 @@
 <!-- Menu de la page -->
-  <aside id="cartable">
+  <nav id="cartable">
     <div class="sacoche">
       <h3>Menu</h3>
       <ul>
@@ -8,4 +8,4 @@
         <li>Lien 3</li>
       </ul>
     </div>
-  </aside>
+  </nav>
