[IMP] Lua script - copy images and create their link to be displayed in homepage

--- a/composants/one_element.html
+++ b/composants/one_element.html
@@ -3,7 +3,7 @@
          <span class="element">
            ${ELEMENT_TITLE} <br />
 
-           <img src="${IMG_URL}" alt="${IMG_DESC}" title="${IMG_TITLE}" />
+           <img src="${IMG_URL}" alt="${IMG_DESC}" title="${ELEMENT_DESC}" />
          </span>
        </a>
      </li>
