[DEL] Slimming down of GNUMakefile to support last lua script

--- a/composants/element.html
+++ b/composants/element.html
@@ -1,9 +1,9 @@
      <li>
-       <a class="cadre" href="@@URL_ELEMENT@@" title="@@DESC_ELEMENT@@">
+       <a class="cadre" href="${ELEMENT_URL}" title="${ELEMENT_DESC}">
          <span class="element">
-           @@TITRE_ELEMENT@@ <br />
+           ${ELEMENT_TITLE} <br />
 
-           <img src="@@URL_IMAGE@@" alt="@@DESC_IMAGE@@" title="@@TITRE_IMAGE@@" />
+           <img src="${IMG_URL}" alt="${IMG_DESC}" title="${ELEMENT_DESC}" />
          </span>
        </a>
      </li>
