[FIX] Translate main components to english in order to have an english website

--- a/composants/index.html
+++ b/composants/index.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="${CSS_COLOR}" type="text/css" media="all" title="${CSS_NAME}" />
 </head>
 <body>
-<!-- Entete de page -->
+<!-- Header -->
   <header>
     <h1>${PORTEAIL_TITLE}</h1>
   </header>
 
-<!-- Corps de la page -->
+<!-- Content -->
   <div id="corps">
     ${INTRODUCTION}
     ${CONTENT}
@@ -22,10 +22,10 @@
 
 ${MENU}
 
-<!-- Pied de page -->
+<!-- Footer -->
 
   <footer>
-    <p>Page générée à l'aide de <a href="http://porteail.e-mergence.org/" title="Se rendre sur la page officielle du projet PorteAil">PorteAil</a></p>
+    <p>Proudly powered by <a href="http://porteail.e-mergence.org/" title="Go to PorteAil project official webpage">PorteAil</a></p>
   </footer>
 </body>
 </html>
