--- a/composants/introduction.html
+++ b/composants/introduction.html
@@ -1,11 +1,11 @@
-    <!-- Introduction de la page -->
+    <!-- Webpage introduction -->
     <p>
-    Ce message permet d'introduire le sujet de notre page et expliquer rapidement l'existence du site, la présence des éléments, les catégories, etc.<br />
-    Il est modifiable dans le fichier <em>introduction.html</em> situé dans le dossier <em>composants</em> du répertoire principal de <a href="http://git.dossmann.net/scripts/porteail.git/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a>.
+    This message permit to introduce our webpage subject and quickly explain why this website exists, why all these categories, elements, etc.<br />
+    This one is editable in <em>introduction.html</em> file located in <em>composants</em> directory from main <a href="http://gitorious.org/porteail/" title="Go to PorteAil repositories">PorteAil</a> directory.
     </p>
     <p>
-    Pour de plus amples renseignements sur <a href="http://git.dossmann.net/scripts/porteail.git/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a>, veuillez vous référer au fichier <em>README.md</em> contenu dans le répertoire principal du projet <a href="http://git.dossmann.net/scripts/porteail.git/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a>.
+    For more information about <a href="http://gitorious.org/porteail/" title="Go to PorteAil repositories">PorteAil</a>, please refer to <em>README.md</em> file situated in <a href="http://gitorious.org/porteail/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a> main directory.
     </p>
     <p>
-    Les catégories sont renseignées dans le dossier <em>categ</em> dans lequel des fichiers d'exemples, normalement assez parlants, devraient vous permettre de construire votre première page <a href="http://git.dossmann.net/scripts/porteail.git/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a>.
+    Categories are filled in <em>categ</em> directory in which some example file should be talkative for you. This will allow you to generate your first <a href="http://gitorious.org/porteail/" title="Go to PorteAil repositories">PorteAil</a> homepage.
     </p>
