--- a/composants/menu.html
+++ b/composants/menu.html
@@ -1,11 +1,11 @@
-<!-- Menu de la page -->
+<!-- Webpage menu -->
   <nav id="cartable">
     <div class="sacoche">
       <h3>Menu</h3>
       <ul>
-        <li>Lien 1</li>
-        <li>Lien 2</li>
-        <li>Lien 3</li>
+        <li>Link 1</li>
+        <li>Link 2</li>
+        <li>Link 3</li>
       </ul>
     </div>
   </nav>
