--- a/composants/index.html
+++ b/composants/index.html
@@ -25,7 +25,7 @@ ${MENU}
 <!-- Footer -->
 
   <footer>
-    <p>Proudly powered by <a href="http://porteail.e-mergence.org/" title="Go to PorteAil project official webpage">PorteAil</a></p>
+    <p>${POWERED_BY} <a href="http://porteail.e-mergence.org/" title="${POWERED_BY_DESC}">PorteAil</a></p>
   </footer>
 </body>
 </html>
