[ADD] Display PorteAil version on page result

--- a/composants/index.html
+++ b/composants/index.html
@@ -25,7 +25,7 @@ ${MENU}
 <!-- Footer -->
 
   <footer>
-    <p>${POWERED_BY} <a href="http://porteail.e-mergence.org/" title="${POWERED_BY_DESC}">PorteAil</a></p>
+  <p>${POWERED_BY} <a href="http://porteail.e-mergence.org/" title="${POWERED_BY_DESC}">PorteAil ${VERSION}</a></p>
   </footer>
 </body>
 </html>
