[ADD] HTML5UP Astral Theme applied to r129i

--- a/composants/element.html
+++ b/composants/element.html
@@ -1,10 +1,8 @@
-     <li>
-       <a class="cadre" href="${ELEMENT_URL}" title="${ELEMENT_DESC}">
-         <span class="element">
-           ${ELEMENT_TITLE} <br />
+										<div class="4u">
+                      <a href="${ELEMENT_URL}" title="${ELEMENT_DESC}" class="box"><span class="element">
+                          ${ELEMENT_TITLE} <br />
 
-           <img src="${IMG_URL}" alt="${IMG_DESC}" title="${ELEMENT_DESC}" />
-         </span>
-       </a>
-     </li>
-
+                          <img src="${IMG_URL}" alt="${IMG_DESC}" title="${ELEMENT_DESC}">
+                        </span>
+                      </a>
+										</div>
