--- a/composants/categories.html
+++ b/composants/categories.html
@@ -1,9 +1,12 @@
 <!-- Category - ${CATEG_TITLE} -->
 
-     <h2>${CATEG_TITLE}</h2>
-     <p>${CATEG_DESC}</p>
-     <ul class="ensemble_element">
-       ${ELEMENTS}
-     </ul>
-     <div class="espace">&nbsp;</div>
+                <header>
+                  <h2>${CATEG_TITLE}</h2>
+                </header>
+                <p>${CATEG_DESC}</p>
+                <section class="is-gallery">
+                  <div class="row half">
+                    ${ELEMENTS}
+                  </div>
+                </section>
 
