--- a/composants/index.html
+++ b/composants/index.html
@@ -1,31 +1,70 @@
-<!DOCTYPE html>
-<head>
-  <meta charset="UTF-8" />
-  <title>${TITLE}</title>
-<!--[if lt IE 9]>
-  <script src="html5.js" type="text/javascript"></script>
-<![endif]-->
-  <link rel="stylesheet" href="${DEFAULT_CSS}" type="text/css" media="all" title="${CSS_NAME}" />
-  <link rel="stylesheet" href="${CSS_COLOR}" type="text/css" media="all" title="${CSS_NAME}" />
-</head>
-<body>
-<!-- Header -->
-  <header>
-    <h1>${PORTEAIL_TITLE}</h1>
-  </header>
+<!DOCTYPE HTML>
+<!--
+	Astral 2.5 by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+    <title>${TITLE}</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet" />
+		<script src="js/jquery.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />
+			<link rel="stylesheet" href="css/noscript.css" />
+		</noscript>
+		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+	</head>
+	<body class="homepage">
 
-<!-- Content -->
-  <div id="corps">
-    ${INTRODUCTION}
-    ${CONTENT}
-  </div>
+		<!-- Wrapper-->
+			<div id="wrapper">
+				
+				<!-- Nav -->
+					<nav id="nav">
+						<a href="#me" class="fa fa-home active"><span>Accueil</span></a>
+						<a href="#work" class="fa fa-folder"><span>Liens</span></a>
+						<a href="mailto:regis.hamann@r129i.eu" class="fa fa-envelope"><span>Me contacter</span></a>
+					</nav>
 
-${MENU}
+				<!-- Main -->
+					<div id="main">
+						
+						<!-- Me -->
+							<article id="me" class="panel">
+								<header>
+                <h1>${PORTEAIL_TITLE}</h1>
+								</header>
+								<a href="#work" class="jumplink pic">
+									<span class="arrow fa fa-chevron-right"><span>Mon espace</span></span>
+									<img src="images/regis.jpeg" alt="" />
+								</a>
+							</article>
 
-<!-- Footer -->
+						<!-- Work --> 
+            <article id="work" class="panel">
+                ${CONTENT}
+							</article>
 
-  <footer>
-  <p>${POWERED_BY} <a href="http://porteail.depotoi.re/" title="${POWERED_BY_DESC}">PorteAil ${VERSION}</a></p>
-  </footer>
-</body>
+					</div>
+		
+				<!-- Footer -->
+					<div id="footer">
+						<ul class="links">
+              <li>&copy; ${PORTEAIL_TITLE}</li>
+              <li>Design : <a href="http://html5up.net/">HTML5 UP</a></li>
+              <li>${POWERED_BY} <a href="http://porteail.depotoi.re/" title="${POWERED_BY_DESC}">PorteAil ${VERSION}</a></li>
+						</ul>
+					</div>
+		
+			</div>
+
+	</body>
 </html>
