[DEL] Some useless link + update introduction

--- a/intro.html
+++ b/intro.html
@@ -1,7 +1,7 @@
     <p>
     PorteAil est un outil permettant de générer un portail web simple comme celui ci. Les pages sont statiques.<br />
-    Il utilise un fichier <em>Makefile</em> afin de construire la page du portail.
+    Il utilise un fichier <em>Makefile</em> et le langage Lua afin de construire la page du portail.
     </p>
     <p>
-    Pour de plus amples renseignements sur <a href="http://git.dossmann.net/scripts/porteail.git/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a>, veuillez vous référer au fichier <em>LISMOI</em> contenu dans le répertoire principal du projet <a href="http://git.dossmann.net/scripts/porteail.git/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a>.
+    Pour de plus amples renseignements sur <a href="http://github.org/blankoworld/porteail/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a>, veuillez vous référer au fichier <em>LISMOI</em> contenu dans le répertoire principal du projet <a href="http://github.com/blankoworld/porteail/" title="Se rendre sur le dépôt de fichier de PorteAil">PorteAil</a>.
     </p>
