--- a/composants/index.html
+++ b/composants/index.html
@@ -25,7 +25,7 @@ ${MENU}
 <!-- Footer -->
 
   <footer>
-  <p>${POWERED_BY} <a href="http://porteail.depotoi.re/" title="${POWERED_BY_DESC}">PorteAil ${VERSION}</a></p>
+  <p>${POWERED_BY} <a href="http://github.com/blankoworld/porteail.git/" title="${POWERED_BY_DESC}">PorteAil ${VERSION}</a></p>
   </footer>
 </body>
 </html>
